<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserPageFragment"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="-20dp">

    <LinearLayout
        android:id="@+id/linearLayout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_linked_email"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="50dp"
            android:gravity="bottom"
            android:text="@string/linked_email" />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="10dp"
            android:text="@string/prompt_email"
            android:textColor="@color/teal_700"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:background="#00ff0000"
        android:gravity="start|center"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_email" />

    <Button
        android:id="@+id/button_delete_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:background="#00ff0000"
        android:gravity="start|center"
        android:text="@string/delete_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_change_password" />

    <Button
        android:id="@+id/button_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:background="#00ff0000"
        android:gravity="start|center"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_profile" />

    <Button
        android:id="@+id/button_google_revoke_access"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00ff0000"
        android:gravity="start|center"
        android:text="@string/google_revoke"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_delete_account"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>