<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/todaytodo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fix_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/rectangle"
        android:drawableTop="@drawable/ic_fix"
        android:gravity="center"
        android:padding="20dp"
        android:drawablePadding="5dp"
        android:text="@string/fix"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle"
        android:drawableTop="@drawable/ic_delete"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:drawablePadding="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <Button
        android:id="@+id/delay_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:drawableLeft="@drawable/ic_delay"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:text="@string/delay"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/delete_button" />

    <Button
        android:id="@+id/today_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:drawableLeft="@drawable/ic_today"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:text="@string/today"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/delay_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>
