<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="@string/searchforuser"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/userView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEditText">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/mailexample"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/nicknameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="nickname"
            android:textAlignment="viewStart"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/nullTextView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/nouser"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEditText" />

    <Button
        android:id="@+id/willFollowButton"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/will_follow"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/userView"
        app:layout_constraintTop_toTopOf="@id/userView" />

    <Button
        android:id="@+id/followingButton"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/following"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="11sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/userView"
        app:layout_constraintTop_toTopOf="@id/userView" />


    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:backgroundTint="#00000000"
        android:src="@drawable/ic_baseline_search_24"
        app:tint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
